# vol-shield

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
deploy/: env.example
deploy/systemd/: vol-shield-deploy.service  vol-shield-deploy.timer  vol-shield-refresh.service  vol-shield-refresh.timer  vol-shield-streamlit.service
scripts/: vps-deploy.sh  vps-setup.sh
tests/: test_build_shield_signal.py  test_busday.py  test_hard_data_gate.py  test_price_source_massive.py  test_shield_db_first.py  test_shield_engine_smoke.py  test_snapshot_stale.py  test_stress_shield_scenarios.py  test_vix_semantics.py
vol_shield/: __init__.py
vol_shield/cli/: refresh_prices.py  run_shield_signal.py
vol_shield/core/: reference_data.py  vix_semantics.py
vol_shield/data/: backend.py  schema.py
vol_shield/data/repositories/: price_repository.py  shield_repository.py
vol_shield/domain/: calendar_engine.py  data_freshness.py  hard_data_gate.py  shield_engine.py  yahoo_refresh_session.py
vol_shield/platform/: busday.py  cache.py  live_config.py  secrets.py  settings.py
vol_shield/providers/: massive_history.py  massive_rate_limiter.py  price_source.py  retry_http.py  retry_util.py  yahoo_history.py
vol_shield/services/: build_shield_signal.py
